--- a/dqmdata/templates/scatterplot.html
+++ b/dqmdata/templates/scatterplot.html
@@ -1,11 +1,11 @@
 <html>
 	<head>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<script src="http://code.highcharts.com/highcharts.js"></script>
-	<script src="http://code.highcharts.com/modules/exporting.js"></script>
+	<script src="https://code.highcharts.com/highcharts.js"></script>
+	<script src="https://code.highcharts.com/modules/exporting.js"></script>
 	<!-- optional -->
-	<script src="http://code.highcharts.com/modules/offline-exporting.js"></script>
-	<script src="http://code.highcharts.com/modules/export-data.js"></script>
+	<script src="https://code.highcharts.com/modules/offline-exporting.js"></script>
+	<script src="https://code.highcharts.com/modules/export-data.js"></script>
 	<!--<script src="http://code.highcharts.com/modules/exporting.js"></script>-->
 	<div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
 	 <script>
